add megalovania game

--- a/html/main.pug
+++ b/html/main.pug
@@ -15,4 +15,6 @@ block content
     span.hello 안녕!!
     img.ok(src='./img/ok.png')
   script(src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js")
+  script(src="//hammerjs.github.io/dist/hammer.min.js")
   script(src="./js/main.js")
+  script(src="./js/sansbridge.js")
