--- a/html/css/main.css
+++ b/html/css/main.css
@@ -7,6 +7,15 @@ img{
     left:50vw;
     transform:translate(-50%);
 }
+.absolutlyCenter{
+    position:"absolute";
+    top:"50%";
+    left:"50%";
+    transform:"translate(-50%,-50%)";
+}
+.hide{
+    display:none
+}
 body, html{
     padding:0;
     margin:0;
