change language ko

--- a/html/layout.pug
+++ b/html/layout.pug
@@ -1,5 +1,5 @@
 doctype html
-html
+html(lang="ko")
     head
         meta(name="viewport" content="width=device-width, user-scalable=no")
         block title
