--- a/html/css/main.css
+++ b/html/css/main.css
@@ -8,10 +8,10 @@ img{
     transform:translate(-50%);
 }
 .absolutlyCenter{
-    position:"absolute";
-    top:"50%";
-    left:"50%";
-    transform:"translate(-50%,-50%)";
+    position:absolute;
+    top:50%;
+    left:50%;
+    transform:translate(-50%,-50%);
 }
 .hide{
     display:none
