--- a/html/main.pug
+++ b/html/main.pug
@@ -14,7 +14,10 @@ block content
     img.flower.second(src='./img/flower_1.gif')
     span.hello 안녕!!
     img.ok(src='./img/ok.png')
+  script(src="./js/ismobile.min.js")
   script(src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js")
   script(src="//hammerjs.github.io/dist/hammer.min.js")
   script(src="./js/main.js")
   script(src="./js/sansbridge.js")
+  
+  
