--- a/html/main.pug
+++ b/html/main.pug
@@ -14,6 +14,7 @@ block content
     img.flower.second(src='./img/flower_1.gif')
     span.hello 안녕!!
     img.ok(src='./img/ok.png')
+    div.leftcount
   script(src="./js/ismobile.min.js")
   script(src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js")
   script(src="//hammerjs.github.io/dist/hammer.min.js")
