--- a/html/css/main.css
+++ b/html/css/main.css
@@ -88,7 +88,13 @@ body, html{
     display:none;
     animation: 100ms colorBliking infinite
 }
-
+.leftcount{
+    position:absolute;
+    top:0;
+    bottom:0;
+    color:black;
+    
+}
 @keyframes colorBliking{
     0%{color:black; text-shadow:0px 0px 2px white;}
     100%{color:white ;text-shadow:0px 0px 2px black;}
